# learn-opengl

./: .gitignore  CMakeLists.txt  README.md
include/: Shader.h
src/: Shader.cpp  glad.c  main.cpp  main.frag  main.vert
